# napari-chunked-regionprops

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/napari_chunked_regionprops/: _widget.py
src/napari_dask_ndmeasure/: __init__.py  _measure.py  _widget.py  napari.yaml
tests/: test_measure.py  test_widget.py
